<resources>
    <string name="app_name">SleepSync</string>
    <string name="settings">Settings</string>
    <string name="appDescription">The best app to improve your sleep and energize your mornings with personalized tips and routines!</string>
    <string name="appName">SleepSync</string>
    <string name="greetUser">Abhinay\'s Schedule:</string>
    <string name="sleepScore">Sleep Score: 82/100</string>
    <string name="sleep_resources">Sleep Resources</string>
    <string name="advanced_data">Advanced Data</string>
    <string name="average_sleep_time_7_hours">Average Sleep Time: 7 hours</string>
</resources>